--- a/web/trivia-ui/src/App.css
+++ b/web/trivia-ui/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  background-color: #cfd0d3;
   text-align: center;
 }
 
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #303133;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
